--- a/components/aws/sagemaker/hyperparameter_tuning/component.yaml
+++ b/components/aws/sagemaker/hyperparameter_tuning/component.yaml
@@ -139,7 +139,7 @@ outputs:
     description: 'The registry path of the Docker image that contains the training algorithm'
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:20200407
+    image: amazon/aws-sagemaker-kfp-components:0.2
     command: ['python']
     args: [
       hyperparameter_tuning.py,
