--- a/components/aws/sagemaker/train/component.yaml
+++ b/components/aws/sagemaker/train/component.yaml
@@ -103,7 +103,7 @@ outputs:
   - {name: training_image,        description: 'The registry path of the Docker image that contains the training algorithm'}
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:20200407
+    image: amazon/aws-sagemaker-kfp-components:0.2
     command: ['python']
     args: [
       train.py,
