--- a/manifests/kustomize/base/argo/cluster-scoped/kustomization.yaml
+++ b/manifests/kustomize/base/argo/cluster-scoped/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - workflow-crd.yaml
+- workflow-controller-clusterrole.yaml
+- workflow-controller-clusterrolebinding.yaml
