--- a/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
@@ -21,7 +21,7 @@ spec:
               fieldPath: metadata.namespace
         - name: OBJECTSTORECONFIG_SECURE
           value: "false"
-        image: gcr.io/ml-pipeline/api-server:0.1.27
+        image: gcr.io/ml-pipeline/api-server:$(IMAGE_TAG)
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-api-server
         ports:
