--- a/manifests/kustomize/base/pipeline/ml-pipeline-ui-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-ui-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: ml-pipeline-ui
     spec:
       containers:
-      - image: gcr.io/ml-pipeline/frontend:0.1.27
+      - image: gcr.io/ml-pipeline/frontend:$(IMAGE_TAG)
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-ui
         ports:
