well done, it should can work now

--- a/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
+++ b/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
@@ -10,7 +10,7 @@ data:
     artifactRepository:
     {
         s3: {
-            bucket: mlpipeline,
+            bucket: $(BUCKET_NAME),
             keyPrefix: artifacts,
             endpoint: minio-service.$(NAMESPACE):9000,
             insecure: true,
