--- a/manifests/kustomize/env/gcp/gcp-configurations-patch.yaml
+++ b/manifests/kustomize/env/gcp/gcp-configurations-patch.yaml
@@ -10,50 +10,7 @@ spec:
           env:
             - name: OBJECTSTORECONFIG_BUCKETNAME
               # Don't add gs:// prefix.
-              # If bucket doesn't exist, the deployment will create one.
-              value: ''
+              # If bucket doesn't exist, the deployment will try to create one.
+              value: $(GCS_BUCKET_NAME)
             - name: DBCONFIG_PASSWORD
               value: ''
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: cloudsqlproxy
-spec:
-  template:
-    spec:
-      containers:
-        - name: cloudsqlproxy
-          env:
-            - name: CLOUD_SQL_INSTANCE_CONNECTION_NAME
-              # E.g. project-id:us-central1:instance-name
-              value: ''
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: workflow-controller-configmap
-data:
-  config: |
-    {
-    namespace: $(NAMESPACE),
-    executorImage: gcr.io/ml-pipeline/argoexec:v2.3.0-license-compliance,
-    artifactRepository:
-    {
-        s3: {
-            bucket: '', # Replace this with the same bucket as OBJECTSTORECONFIG_BUCKETNAME.
-            keyPrefix: artifacts,
-            endpoint: minio-service.$(NAMESPACE):9000,
-            insecure: true,
-            accessKeySecret: {
-                name: mlpipeline-minio-artifact,
-                key: accesskey
-            },
-            secretKeySecret: {
-                name: mlpipeline-minio-artifact,
-                key: secretkey
-            }
-        },
-        archiveLogs: true
-    }
-    }
