--- a/manifests/kustomize/env/gcp/minio-gcs-gateway/minio-gcs-gateway-deployment.yaml
+++ b/manifests/kustomize/env/gcp/minio-gcs-gateway/minio-gcs-gateway-deployment.yaml
@@ -21,11 +21,8 @@ spec:
           args:
             - gateway
             - gcs
-            - $(PROJECT_ID)
-          env:
-            - name: PROJECT_ID
-              # GCP Project ID
-              value: ""            
+            - $(GCS_PROJECT_ID)
+          env:            
             - name: MINIO_ACCESS_KEY
               value: "minio"
             - name: MINIO_SECRET_KEY
