--- a/manifests/kustomize/gen/dev.yaml
+++ b/manifests/kustomize/gen/dev.yaml
@@ -766,12 +766,13 @@ apiVersion: v1
 data:
   appName: pipeline
   appVersion: 0.4.0
+  bucketName: mlpipeline
   imageTag: 0.4.0
 kind: ConfigMap
 metadata:
   labels:
     application-crd-id: kubeflow-pipelines
-  name: pipeline-parameters-585btmt8dk
+  name: pipeline-parameters-6k22cbhtb6
   namespace: kubeflow
 ---
 apiVersion: v1
