--- a/manifests/kustomize/gen/gcp.yaml
+++ b/manifests/kustomize/gen/gcp.yaml
@@ -26,14 +26,6 @@ kind: ServiceAccount
 metadata:
   labels:
     application-crd-id: kubeflow-pipelines
-  name: kubeflow-pipelines-cache
-  namespace: kubeflow
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  labels:
-    application-crd-id: kubeflow-pipelines
   name: kubeflow-pipelines-cache-deployer-sa
   namespace: kubeflow
 ---
@@ -42,7 +34,7 @@ kind: ServiceAccount
 metadata:
   labels:
     application-crd-id: kubeflow-pipelines
-  name: kubeflow-pipelines-metadata-writer
+  name: kubeflow-pipelines-cache
   namespace: kubeflow
 ---
 apiVersion: v1
@@ -50,7 +42,7 @@ kind: ServiceAccount
 metadata:
   labels:
     application-crd-id: kubeflow-pipelines
-  name: ml-pipeline
+  name: kubeflow-pipelines-metadata-writer
   namespace: kubeflow
 ---
 apiVersion: v1
@@ -91,6 +83,14 @@ metadata:
   labels:
     application-crd-id: kubeflow-pipelines
   name: ml-pipeline-visualizationserver
+  namespace: kubeflow
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    application-crd-id: kubeflow-pipelines
+  name: ml-pipeline
   namespace: kubeflow
 ---
 apiVersion: v1
@@ -277,47 +277,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    app: ml-pipeline
-    application-crd-id: kubeflow-pipelines
-  name: ml-pipeline
-  namespace: kubeflow
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-  - list
-  - delete
-- apiGroups:
-  - argoproj.io
-  resources:
-  - workflows
-  verbs:
-  - create
-  - get
-  - list
-  - watch
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - kubeflow.org
-  resources:
-  - scheduledworkflows
-  verbs:
-  - create
-  - get
-  - list
-  - update
-  - patch
-  - delete
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  labels:
     application-crd-id: kubeflow-pipelines
   name: ml-pipeline-persistenceagent-role
   namespace: kubeflow
@@ -452,6 +411,47 @@ rules:
   - get
   - list
   - watch
+  - update
+  - patch
+  - delete
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  labels:
+    app: ml-pipeline
+    application-crd-id: kubeflow-pipelines
+  name: ml-pipeline
+  namespace: kubeflow
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - delete
+- apiGroups:
+  - argoproj.io
+  resources:
+  - workflows
+  verbs:
+  - create
+  - get
+  - list
+  - watch
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - kubeflow.org
+  resources:
+  - scheduledworkflows
+  verbs:
+  - create
+  - get
+  - list
   - update
   - patch
   - delete
@@ -640,23 +640,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    app: ml-pipeline
-    application-crd-id: kubeflow-pipelines
-  name: ml-pipeline
-  namespace: kubeflow
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: ml-pipeline
-subjects:
-- kind: ServiceAccount
-  name: ml-pipeline
-  namespace: kubeflow
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  labels:
     application-crd-id: kubeflow-pipelines
   name: ml-pipeline-persistenceagent-binding
   namespace: kubeflow
@@ -716,6 +699,23 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ml-pipeline-viewer-crd-service-account
+  namespace: kubeflow
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  labels:
+    app: ml-pipeline
+    application-crd-id: kubeflow-pipelines
+  name: ml-pipeline
+  namespace: kubeflow
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: ml-pipeline
+subjects:
+- kind: ServiceAccount
+  name: ml-pipeline
   namespace: kubeflow
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -813,6 +813,22 @@ metadata:
 ---
 apiVersion: v1
 data:
+  appName: pipeline
+  appVersion: 0.4.0
+  bucketName: yourGcsBucketName
+  gcsCloudSqlInstanceName: yourCloudSqlInstanceName
+  gcsProjectId: yourGcsProjectId
+  imageTag: 0.4.0
+kind: ConfigMap
+metadata:
+  annotations: {}
+  labels:
+    application-crd-id: kubeflow-pipelines
+  name: pipeline-parameters-84t7hc89f6
+  namespace: kubeflow
+---
+apiVersion: v1
+data:
   config: |
     {
     namespace: kubeflow,
@@ -820,7 +836,7 @@ data:
     artifactRepository:
     {
         s3: {
-            bucket: '', # Replace this with the same bucket as OBJECTSTORECONFIG_BUCKETNAME.
+            bucket: yourGcsBucketName,
             keyPrefix: artifacts,
             endpoint: minio-service.kubeflow:9000,
             insecure: true,
@@ -955,27 +971,6 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    application-crd-id: kubeflow-pipelines
-  name: ml-pipeline
-  namespace: kubeflow
-spec:
-  ports:
-  - name: http
-    port: 8888
-    protocol: TCP
-    targetPort: 8888
-  - name: grpc
-    port: 8887
-    protocol: TCP
-    targetPort: 8887
-  selector:
-    app: ml-pipeline
-    application-crd-id: kubeflow-pipelines
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
     app: ml-pipeline-ui
     application-crd-id: kubeflow-pipelines
   name: ml-pipeline-ui
@@ -1003,6 +998,27 @@ spec:
     targetPort: 8888
   selector:
     app: ml-pipeline-visualizationserver
+    application-crd-id: kubeflow-pipelines
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    application-crd-id: kubeflow-pipelines
+  name: ml-pipeline
+  namespace: kubeflow
+spec:
+  ports:
+  - name: http
+    port: 8888
+    protocol: TCP
+    targetPort: 8888
+  - name: grpc
+    port: 8887
+    protocol: TCP
+    targetPort: 8887
+  selector:
+    app: ml-pipeline
     application-crd-id: kubeflow-pipelines
 ---
 apiVersion: v1
@@ -1145,11 +1161,8 @@ spec:
       - command:
         - /cloud_sql_proxy
         - -dir=/cloudsql
-        - -instances=$(CLOUD_SQL_INSTANCE_CONNECTION_NAME)=tcp:0.0.0.0:3306
+        - -instances=yourCloudSqlInstanceName=tcp:0.0.0.0:3306
         - term_timeout=10s
-        env:
-        - name: CLOUD_SQL_INSTANCE_CONNECTION_NAME
-          value: ""
         image: gcr.io/cloudsql-docker/gce-proxy:1.14
         lifecycle:
           preStop:
@@ -1356,10 +1369,8 @@ spec:
       - args:
         - gateway
         - gcs
-        - $(PROJECT_ID)
+        - yourGcsProjectId
         env:
-        - name: PROJECT_ID
-          value: ""
         - name: MINIO_ACCESS_KEY
           value: minio
         - name: MINIO_SECRET_KEY
@@ -1368,45 +1379,6 @@ spec:
         name: minio
         ports:
         - containerPort: 9000
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    app: ml-pipeline
-    application-crd-id: kubeflow-pipelines
-  name: ml-pipeline
-  namespace: kubeflow
-spec:
-  selector:
-    matchLabels:
-      app: ml-pipeline
-      application-crd-id: kubeflow-pipelines
-  template:
-    metadata:
-      labels:
-        app: ml-pipeline
-        application-crd-id: kubeflow-pipelines
-    spec:
-      containers:
-      - env:
-        - name: OBJECTSTORECONFIG_BUCKETNAME
-          value: ""
-        - name: DBCONFIG_PASSWORD
-          value: ""
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: OBJECTSTORECONFIG_SECURE
-          value: "false"
-        image: gcr.io/ml-pipeline/api-server:0.4.0
-        imagePullPolicy: IfNotPresent
-        name: ml-pipeline-api-server
-        ports:
-        - containerPort: 8888
-        - containerPort: 8887
-      serviceAccountName: ml-pipeline
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -1560,6 +1532,45 @@ spec:
         ports:
         - containerPort: 8888
       serviceAccountName: ml-pipeline-visualizationserver
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: ml-pipeline
+    application-crd-id: kubeflow-pipelines
+  name: ml-pipeline
+  namespace: kubeflow
+spec:
+  selector:
+    matchLabels:
+      app: ml-pipeline
+      application-crd-id: kubeflow-pipelines
+  template:
+    metadata:
+      labels:
+        app: ml-pipeline
+        application-crd-id: kubeflow-pipelines
+    spec:
+      containers:
+      - env:
+        - name: OBJECTSTORECONFIG_BUCKETNAME
+          value: $(GCS_BUCKET_NAME)
+        - name: DBCONFIG_PASSWORD
+          value: ""
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: OBJECTSTORECONFIG_SECURE
+          value: "false"
+        image: gcr.io/ml-pipeline/api-server:0.4.0
+        imagePullPolicy: IfNotPresent
+        name: ml-pipeline-api-server
+        ports:
+        - containerPort: 8888
+        - containerPort: 8887
+      serviceAccountName: ml-pipeline
 ---
 apiVersion: apps/v1
 kind: Deployment
