--- a/manifests/kustomize/env/gcp-dev/kustomization.yaml
+++ b/manifests/kustomize/env/gcp-dev/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 bases:
   - ../dev
-  - proxy
+  - ../gcp/inverse-proxy
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
