--- a/frontend/server/package.json
+++ b/frontend/server/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
     "@types/express": "^4.11.1",
+    "@types/gunzip-maybe": "^1.4.0",
     "@types/jest": "^24.9.1",
     "@types/minio": "^7.0.3",
     "@types/node": "^10.17.11",
@@ -25,18 +26,18 @@
     "@types/supertest": "^2.0.8",
     "@types/tar": "^4.0.3",
     "@types/tar-stream": "^1.6.1",
-    "jest": "^25.1.0",
+    "jest": "^25.3.0",
     "supertest": "^4.0.2",
     "ts-jest": "^25.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.6.4"
   },
   "scripts": {
-    "build": "tsc --lib es2015 --outDir ./dist --typeRoots ./node_modules/@types server.ts",
+    "build": "tsc --project . --outDir ./dist",
     "format": "npx prettier --write './**/*.{ts,tsx}'",
     "format:check": "npx prettier --check './**/*.{ts,tsx}' || node ../scripts/check-format-error-info.js",
     "lint": "npx tslint -c tslint.json -p tsconfig.json",
-    "test": "npx jest",
+    "test": "jest",
     "test:coverage": "npm test -- --coverage",
     "test:ci": "npm run format:check && npm run lint && npm run test:coverage"
   },
@@ -51,7 +52,7 @@
     },
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "dist/"
+      "<rootDir>/dist/"
     ]
   },
   "repository": {
