--- a/frontend/server/tsconfig.json
+++ b/frontend/server/tsconfig.json
@@ -1,11 +1,17 @@
 {
+  "include": [
+    "."
+  ],
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "esModuleInterop": true,
+    "typeRoots": ["node_modules/@types"],
     "outDir": "build/dist",
-    "module": "esnext",
+    "module": "commonjs",
     "target": "es5",
-    "lib": ["es6", "dom", "es2019"],
+    "lib": ["es6", "es2019"],
+    "types": ["node", "jest"],
     "sourceMap": true,
     "allowJs": true,
     "resolveJsonModule": true,
@@ -18,5 +24,5 @@
     "suppressImplicitAnyIndexErrors": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "coverage"]
+  "exclude": ["dist", "coverage", "node_modules"]
 }
