Fixed bug in the unit test
Kubernetes does not validate the structures at all...

--- a/sdk/python/tests/compiler/testdata/artifact_passing_using_volume.yaml
+++ b/sdk/python/tests/compiler/testdata/artifact_passing_using_volume.yaml
@@ -140,4 +140,5 @@ spec:
   volumes:
   - name: data-storage
     persistentVolumeClaim:
-      apiVersion: data-volume
+      spec:
+        volumeName: data-volume
