--- a/manifests/kustomize/sample/params.env
+++ b/manifests/kustomize/sample/params.env
@@ -1,4 +1,5 @@
-appName=myPipeline
-bucketName=myGcsBucketName
-gcsProjectId=myGcsProjectId
-gcsCloudSqlInstanceName=myCloudSqlInstanceName
+appName=mypipeline
+bucketName=renming-mlpipeline-kubeflowpipelines-default
+gcsProjectId=renming-mlpipeline
+gcsCloudSqlInstanceName=renming-mlpipeline:us-central1:kfpinstance
+gcsCloudSqlDbName=mypipelinedb
