--- a/manifests/kustomize/env/gcp/params.env
+++ b/manifests/kustomize/env/gcp/params.env
@@ -4,3 +4,4 @@ imageTag=0.4.0
 bucketName=yourGcsBucketName
 gcsProjectId=yourGcsProjectId
 gcsCloudSqlInstanceName=yourCloudSqlInstanceName
+gcsCloudSqlDbName=yourDbName
