--- a/manifests/kustomize/env/gcp/gcp-default-config/kustomization.yaml
+++ b/manifests/kustomize/env/gcp/gcp-default-config/kustomization.yaml
@@ -2,5 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- minio-gcs-gateway-deployment.yaml
-- minio-gcs-gateway-service.yaml
+- gcp-default-configmap.yaml
