--- a/manifests/kustomize/sample/kustomization.yaml
+++ b/manifests/kustomize/sample/kustomization.yaml
@@ -7,7 +7,7 @@ bases:
 
 # Used by Kustomize
 configMapGenerator:
-  - name: pipeline-parameters
+  - name: pipeline-install-config
     env: params.env
     behavior: merge
 
