--- a/manifests/kustomize/base/pipeline/ml-pipeline-ui-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-ui-deployment.yaml
@@ -26,4 +26,6 @@ spec:
                 fieldPath: metadata.namespace
           - name: ALLOW_CUSTOM_VISUALIZATIONS
             value: "true"
+          - name: DEPLOYMENT
+            value: MARKETPLACE
       serviceAccountName: ml-pipeline-ui
