--- a/manifests/kustomize/base/params.yaml
+++ b/manifests/kustomize/base/params.yaml
@@ -6,6 +6,16 @@ varReference:
   kind: ConfigMap
 - path: data/project_id
   kind: ConfigMap
+- path: data/host
+  kind: ConfigMap
+- path: data/port
+  kind: ConfigMap
+- path: data/mlmd_db
+  kind: ConfigMap
+- path: data/cache_db
+  kind: ConfigMap
+- path: data/pipeline_db
+  kind: ConfigMap
 - path: metadata/name
   kind: Namespace
 - path: metadata/name
