--- a/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
@@ -19,12 +19,37 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        # - name: MINIO_SERVICE_SERVICE_HOST
-        #   value: "minio-service.$(NAMESPACE)"
-        # - name: MINIO_SERVICE_SERVICE_PORT
-        #   value: "9000"
         - name: OBJECTSTORECONFIG_SECURE
           value: "false"
+        - name: OBJECTSTORECONFIG_BUCKETNAME
+          value: $(BUCKET_NAME)
+        - name: DBCONFIG_USER
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: username
+        - name: DBCONFIG_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: password
+        - name: DBCONFIG_DBNAME
+          valueFrom:
+            configMapKeyRef:
+              name: mysql-configmap
+              key: pipeline_db
+        - name: DBCONFIG_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: mysql-configmap
+              key: host
+        - name: DBCONFIG_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: mysql-configmap
+              key: port
+
+
         image: gcr.io/ml-pipeline/api-server:$(IMAGE_TAG)
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-api-server
