--- a/manifests/kustomize/env/gcp/params.env
+++ b/manifests/kustomize/env/gcp/params.env
@@ -1,6 +1,6 @@
-appName=pipeline
-appVersion=0.4.0
-imageTag=0.4.0
+pipelineDb=mlpipeline-pipelinedb
+mlmdDb=mlpipeline-metadb
+cacheDb=mlpipeline-cachedb
 bucketName=yourGcsBucketName
 gcsProjectId=yourGcsProjectId
 gcsCloudSqlInstanceName=yourCloudSqlInstanceName
