correct db name

--- a/manifests/kustomize/env/gcp/params.env
+++ b/manifests/kustomize/env/gcp/params.env
@@ -1,6 +1,6 @@
-pipelineDb=mlpipeline-pipelinedb
-mlmdDb=mlpipeline-metadb
-cacheDb=mlpipeline-cachedb
+pipelineDb=pipelinedb
+mlmdDb=metadb
+cacheDb=cachedb
 bucketName=yourGcsBucketName
 gcsProjectId=yourGcsProjectId
 gcsCloudSqlInstanceName=yourCloudSqlInstanceName
