--- a/manifests/kustomize/env/dev/kustomization.yaml
+++ b/manifests/kustomize/env/dev/kustomization.yaml
@@ -2,9 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - ../../base
-  - minio
-  - mysql
+  - ../platform-agnostic
+  - ../gcp/inverse-proxy
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
@@ -14,9 +13,3 @@ commonLabels:
 
 # Replace with your namespace
 namespace: kubeflow
-
-images:
-  - name: mysql
-    newTag: "5.6"
-  - name: minio/minio
-    newTag: RELEASE.2018-02-09T22-40-05Z
