--- a/manifests/kustomize/sample/params.env
+++ b/manifests/kustomize/sample/params.env
@@ -1,4 +1,4 @@
 appName=mypipeline
-bucketName=renming-mlpipeline-kubeflowpipelines-default
-gcsProjectId=renming-mlpipeline
-gcsCloudSqlInstanceName=renming-mlpipeline:us-central1:kfpinstance
+bucketName=mybucketname
+gcsProjectId=myproject
+gcsCloudSqlInstanceName=myproject:myregion:myinstance
