Revert "OSS 1.0 Kustomize part-2 parameterize & fix CloudSQL (#3540)"
This reverts commit 91c323900435cd3013549894e4afd8ed14523407.

--- a/manifests/kustomize/base/cache-deployer/cache-deployer-deployment.yaml
+++ b/manifests/kustomize/base/cache-deployer/cache-deployer-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: main
-        image: gcr.io/ml-pipeline/cache-deployer:$(IMAGE_TAG)
+        image: gcr.io/ml-pipeline/cache-deployer:latest
         imagePullPolicy: Always
         env:
         - name: NAMESPACE_TO_WATCH
