--- a/manifests/kustomize/base/proxy/proxy-deployment.yaml
+++ b/manifests/kustomize/base/proxy/proxy-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       hostNetwork: true
       containers:
-      - image: gcr.io/ml-pipeline/inverse-proxy-agent:$(IMAGE_TAG)
+      - image: gcr.io/ml-pipeline/inverse-proxy-agent:0.1.20
         imagePullPolicy: IfNotPresent
         name: proxy-agent
       serviceAccountName: proxy-agent-runner
