--- a/manifests/kustomize/env/gcp/kustomization.yaml
+++ b/manifests/kustomize/env/gcp/kustomization.yaml
@@ -2,11 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - ../../base
-  - inverse-proxy
-  - minio-gcs-gateway
-  - cloudsql-proxy
-  - gcp-default-config
+  - ../../namespaced
+  - minio
+  - mysql
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
@@ -20,24 +18,15 @@ namespace: kubeflow
 patchesStrategicMerge:
   - gcp-configurations-patch.yaml
 
-# Used by Kustomize
-configMapGenerator:
-  - name: pipeline-install-config
-    env: params.env
-    behavior: merge
+images:
+  - name: gcr.io/cloudsql-docker/gce-proxy
+    newTag: "1.14"
+  - name: gcr.io/ml-pipeline/minio
+    newTag: RELEASE.2019-08-14T20-37-41Z-license-compliance
 
-vars:
-  - name: GCP_PROJECT_ID
-    objref:
-      kind: ConfigMap
-      name: pipeline-install-config
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.gcsProjectId
-  - name: GCP_CLOUDSQL_INSTANCE_NAME
-    objref:
-      kind: ConfigMap
-      name: pipeline-install-config
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.gcsCloudSqlInstanceName
+secretGenerator:
+  - name: user-gcp-sa
+    files:
+      # Create a service account key and stored as application_default_credentials.json in the same folder.
+      # https://cloud.google.com/iam/docs/creating-managing-service-account-keys#creating_service_account_keys
+      - application_default_credentials.json
