--- a/manifests/kustomize/base/metadata/kustomization.yaml
+++ b/manifests/kustomize/base/metadata/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - metadata-configmap.yaml
+  - metadata-mysql-secret.yaml
   - metadata-grpc-deployment.yaml
   - metadata-grpc-service.yaml
   - metadata-envoy-deployment.yaml
