--- a/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
@@ -21,36 +21,7 @@ spec:
               fieldPath: metadata.namespace
         - name: OBJECTSTORECONFIG_SECURE
           value: "false"
-        - name: OBJECTSTORECONFIG_BUCKETNAME
-          value: $(BUCKET_NAME)
-        - name: DBCONFIG_USER
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: username
-        - name: DBCONFIG_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: password
-        - name: DBCONFIG_DBNAME
-          valueFrom:
-            configMapKeyRef:
-              name: mysql-configmap
-              key: pipeline_db
-        - name: DBCONFIG_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: mysql-configmap
-              key: host
-        - name: DBCONFIG_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: mysql-configmap
-              key: port
-
-
-        image: gcr.io/ml-pipeline/api-server:$(IMAGE_TAG)
+        image: gcr.io/ml-pipeline/api-server:0.1.27
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-api-server
         ports:
