--- a/manifests/kustomize/base/pipeline/ml-pipeline-scheduledworkflow-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-scheduledworkflow-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: ml-pipeline-scheduledworkflow
     spec:
       containers:
-      - image: gcr.io/ml-pipeline/scheduledworkflow:$(IMAGE_TAG)
+      - image: gcr.io/ml-pipeline/scheduledworkflow:0.1.27
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-scheduledworkflow
         env:
