--- a/manifests/kustomize/base/pipeline/ml-pipeline-visualization-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-visualization-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: ml-pipeline-visualizationserver
     spec:
       containers:
-      - image: gcr.io/ml-pipeline/visualization-server:$(IMAGE_TAG)
+      - image: gcr.io/ml-pipeline/visualization-server:0.1.27
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-visualizationserver
         ports:
