--- a/manifests/kustomize/sample/kustomization.yaml
+++ b/manifests/kustomize/sample/kustomization.yaml
@@ -17,8 +17,9 @@ secretGenerator:
     behavior: merge
 
 #### Customization ###
-# 1. Replace with your namespace
-namespace: mykubeflow
+# !!! If you want to customize the namespace,
+# please also update base/cache-deployer/cluster-scoped/cache-deployer-clusterrolebinding.yaml
+namespace: kubeflow
 # 2. Change values in params.env file
 # 3. Change values in params-db-secret.env file for CloudSQL username and password
 # 4. kubectl apply -k ./
