Fix server typing

--- a/frontend/server/tsconfig.json
+++ b/frontend/server/tsconfig.json
@@ -22,7 +22,8 @@
     "strictBindCallApply": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true
   },
   "exclude": ["dist", "coverage", "node_modules"]
 }
