--- a/frontend/server/tsconfig.json
+++ b/frontend/server/tsconfig.json
@@ -1,17 +1,15 @@
 {
-  "include": [
-    "."
-  ],
+  "include": ["."],
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types"],
-    "outDir": "build/dist",
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "jest"],
+    "outDir": "./dist",
     "module": "commonjs",
     "target": "es5",
     "lib": ["es6", "es2019"],
-    "types": ["node", "jest"],
     "sourceMap": true,
     "allowJs": true,
     "resolveJsonModule": true,
