--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -53,9 +53,10 @@ COPY ./samples .
 # RUN  for pipeline in $(find . -maxdepth 2 -name '*.py' -type f); do dsl-compile --py "$pipeline" --output "$pipeline.tar.gz"; done
 # The "for" loop breaks on all whitespace, so we either need to override IFS or
 # use the "read" command instead.
-RUN set -e; find core tutorials -maxdepth 2 -name '*.py' -type f | while read pipeline; do \
-    {echo "import kfp; kfp.components.default_base_image_or_builder='gcr.io/google-appengine/python:2020-03-31-141326'" \
-    cat "pipeline"} > "$pipeline.fixed" && mv -f "$pipeline.fixed" "$pipeline" && python3 "$pipeline"; \
+RUN line="import kfp;kfp.components.default_base_image_or_builder='gcr.io/google-appengine/python:2020-03-31-141326";\
+    set -e; find core tutorials -maxdepth 2 -name '*.py' -type f | while read pipeline; do \
+    awk -v text="$line" '!/^#/ && !p {print text; p=1} 1' "$pipeline" && \
+    python3 "$pipeline"; \
     done
 
 FROM debian:stretch
