--- a/frontend/server/tsconfig.json
+++ b/frontend/server/tsconfig.json
@@ -21,7 +21,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "skipLibCheck": true,
+    "strictPropertyInitialization": false, // Workaround: swagger generated client breaks this.
     "strict": true
   },
-  "exclude": ["dist", "coverage", "node_modules"]
+  "exclude": ["dist", "coverage", "node_modules", "src/generated"]
 }
