UI Server authorization checks

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,9 +46,11 @@
     "lint": "eslint --ext js,ts,tsx src",
     "mock:api": "ts-node-dev -O '{\"module\": \"commonjs\"}' --project mock-backend/tsconfig.json mock-backend/mock-api-server.ts 3001",
     "mock:server": "node server/dist/server.js build",
+    "mock:server:inspect": "node inspect server/dist/server.js build",
     "postinstall": "cd ./server && npm ci && cd ../mock-backend && npm ci",
     "start:proxy": "./scripts/start-proxy.sh",
     "start:proxy-and-server": "./scripts/start-proxy-and-server.sh",
+    "start:proxy-and-server-inspect": "./scripts/start-proxy-and-server.sh --inspect",
     "start": "EXTEND_ESLINT=true react-scripts start",
     "sync-backend-sample-config": "node scripts/sync-backend-sample-config.js",
     "test": "react-scripts test",
