--- a/frontend/server/tsconfig.json
+++ b/frontend/server/tsconfig.json
@@ -24,5 +24,5 @@
     "strictPropertyInitialization": false, // Workaround: swagger generated client breaks this.
     "strict": true
   },
-  "exclude": ["dist", "coverage", "node_modules", "src/generated"]
+  "exclude": ["dist", "coverage", "node_modules"]
 }
