--- a/frontend/server/package.json
+++ b/frontend/server/package.json
@@ -13,6 +13,7 @@
     "minio": "^7.0.0",
     "node-fetch": "^2.1.2",
     "peek-stream": "^1.1.3",
+    "portable-fetch": "^3.0.0",
     "tar-stream": "^2.1.0"
   },
   "devDependencies": {
