--- a/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - docker build . -f ./sagemaker/unit_tests/Dockerfile -t amazon/unit-test-image
 
       # Run the container and copy the results to /tmp
-      - docker run -dit --name unit-test-container amazon/unit-test-image
+      - docker run -dit --name unit-test-container amazon/unit-test-image -e "PYTEST_ADDOPTS=\"--color=no\""
       - docker wait unit-test-container
       - docker logs unit-test-container
       - docker cp unit-test-container:/app/unit_tests/log /tmp/results.xml
