Update docker build to be quiet

--- a/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
@@ -3,10 +3,10 @@ phases:
   build:
     commands:
       - cd components/aws
-      - docker build . -f ./sagemaker/unit_tests/Dockerfile -t amazon/unit-test-image
+      - docker build . -f ./sagemaker/unit_tests/Dockerfile -t amazon/unit-test-image --quiet
 
       # Run the container and copy the results to /tmp
-      - docker run -dit --name unit-test-container amazon/unit-test-image -e "PYTEST_ADDOPTS=\"--color=no\""
+      - docker run -dit --name unit-test-container  -e "PYTEST_ADDOPTS=\"--color=no\"" amazon/unit-test-image
       - docker wait unit-test-container
       - docker logs unit-test-container
       - docker cp unit-test-container:/app/unit_tests/log /tmp/results.xml
